fix: background image z-index

--- a/src/index.css
+++ b/src/index.css
@@ -28,12 +28,12 @@ body {
   text-shadow: -.06rem 0 black, 0 0.188rem black, .06rem 0.375rem rgb(90, 90, 90), 0 -.06rem black;
 }
 
-.background {
+body:img {
   min-height: 100%;
   min-width: 100%;
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
 }
@@ -87,12 +87,13 @@ body {
   color: #009879;
 }
 
-h4{
+h4 {
   margin: 0 0 1.25rem 0;
 }
+
 #places-form {
   top: 10rem;
-  background-color: rgba(72,72,72,0.9);
+  background-color:rgba(72,72,72,0.9);
   padding: 0.625rem 1.25rem 1.875rem 1.25rem;
   margin: 0 auto;
   max-width: 50%;
@@ -102,6 +103,7 @@ h4{
   -webkit-border-radius: 0.438rem;
   -moz-border-radius: 0.438rem;
 }
+
 #places-form input,   
 #places-form select,   
 #places-form textarea,   
@@ -110,6 +112,7 @@ h4{
   margin-bottom: 0.125rem;
   font-family: Arial, san-serif;
 } 
+
 #places-form input,   
 #places-form select,   
 #places-form textarea { 
@@ -122,16 +125,19 @@ h4{
   margin-bottom: 1.563rem;  
   padding: 0.313rem;
 }  
+
 #places-form input:focus,   
 #places-form select:focus,   
 #places-form textarea:focus {  
   background-color: #E5E6E7; 
 }  
+
 #places-form textarea {
   width: 100%;
   height: 3.75rem;
   overflow-wrap: break-word;
 }
+
 #places-form button[type="submit"] {
   cursor: pointer;
   height: 2.7rem;
@@ -145,6 +151,7 @@ h4{
   color: rgb(31, 53, 87);
   text-shadow: -0.063rem 0 rgb(33, 72, 179), 0 0.016rem black, 0.016rem 0 black, 0 -0.016rem black;
 }
+
 #places-form button[type="submit"]:hover {
   background-color: #21678f;
   -webkit-transition:background 0.3s ease-in-out;
@@ -154,6 +161,7 @@ h4{
   border-width: 0.25rem;
   border-color: #21678f;
 }
+
 #places-form button[type="submit"]:active {
   box-shadow: inset 0 0.063rem 0.188rem rgba(0,0,0,0.5);
 }
@@ -172,7 +180,7 @@ h4{
 
 /* Make form look nice on smaller screens */
 @media only screen and (max-width: 31.25rem) {
-  #places-form{
+  #places-form {
      left: 3%;
      margin-right: 3%;
      width: 88%;
@@ -205,4 +213,13 @@ button:hover {
   -webkit-transition:background 0.3s ease-in-out;
   -moz-transition:background 0.3s ease-in-out;
   transition:background-color 0.3s ease-in-out;
+}
+
+.check-box {
+  float: right;
+  left: 20rem;
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+  box-shadow: 0 0.75rem 1rem 0 rgba(0,0,0,0.24), 0 1.063rem 3.125rem 0 rgba(0,0,0,0.19);
 }
